# Reference

./: README.md
archived/snippets-2018/: README.md
big-data-etl/Jinja_Flume/: README.md
excel-templating/: README.md
gcp-reference/AppEngine/standard_local/: README.md
gcp-reference/BigQuery/: BigQuery - Basics.ipynb
gcp-reference/Datastore/: Datastore - Basics.ipynb
gcp-resource-audit/: README.md  analyze-resources.py  compare-environments.py  get-resources.sh
multi-semantic-release/: README.md  pyproject.toml  python-semantic.ipynb  semantic-release.py
multi-semantic-release/.github/workflows/: test-ds-modal.yml  test-semantic.yml
multi-semantic-release/app/project_1/: CHANGELOG.md  main.py  pyproject.toml
multi-semantic-release/app/project_2/: CHANGELOG.md  core.py  pyproject.toml
nlp-news-tagger/: README.md
